<?xml version="1.0"?>
<package format="2">
  <name>phidgets_manager</name>
  <version>0.0.1</version>
  <description>Driver for the Phidgets Manager devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author>Peter Polidoro</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>phidgets_api</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
