<?xml version="1.0"?>
<package format="2">
  <name>phidgets_toggle_direct</name>
  <version>1.0.0</version>
  <description>Phidgets toggle direct test</description>

  <license>BSD</license>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author>Peter Polidoro</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>libphidget22</depend>
  <depend>phidgets_api</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
